# arkanoid

./: .gitignore  CMakeLists.txt  Doxyfile  Vector2.h  arkanoid.cpp  arkanoid.h  arkanoid.kdev4  generic.cpp  generic.h  main.cpp
data/: test.1.lvl  test.2.lvl
include/arkanoid/controller/: PaddlePlayer.hpp
include/arkanoid/model/: ALevel.hpp  Ball.hpp  Brick.hpp  Level.hpp  LevelTextFile.hpp  Paddle.hpp  SimpleLevelGenerator.hpp  Wall.hpp
include/arkanoid/view/: BallRenderer.hpp  BrickRenderer.hpp  PaddleRenderer.hpp  View.hpp  WallRenderer.hpp
include/generic/model/: ABox2D.hpp  ACollideable2D.hpp  ACollideableBox2D.hpp  ACollisionDetectorBox2D.hpp  AModelUpdater.hpp  AMoveable2D.hpp  AOrderedModelUpdater.hpp  APositionable2D.hpp  AUpdateable.hpp  CollisionDetectorBox2D.hpp  OrderedModelUpdater.hpp
include/generic/type/: Direction.hpp  Vector2.hpp
include/generic/view/: ADrawable.hpp  ARenderer.hpp  AUnorderedRenderer.hpp  AView.hpp
src/: main.cpp
src/arkanoid/controller/: PaddlePlayer.cpp
src/arkanoid/model/: Ball.cpp  Brick.cpp  Level.cpp  LevelTextFile.cpp  Paddle.cpp  SimpleLevelGenerator.cpp  Wall.cpp
src/arkanoid/view/: BallRenderer.cpp  BrickRenderer.cpp  PaddleRenderer.cpp  View.cpp  WallRenderer.cpp
src/generic/model/: CollisionDetectorBox2D.cpp  OrderedModelUpdater.cpp
